@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add support for Alien::Base with alien option
 
 0.24      2019-04-27 09:14:34 -0400
   - Add try_linker_script option (gh#13, gh#15)
